data/all_generated_tests/raw_wast_tests/br_IncorrectBranchTargetResolution_94.wast
;; 5. **Unstructured Branch Attempt Test**: Implement a test where a `br` instruction attempts to jump into a non-enclosing structured block or directly into an arbitrary position within the control flow. Check if the implementation enforces structured control flow rules and prevents this.

(assert_invalid
  (module (func $unstructured-branch
    (block (i32.const 0) (br 1)))
  )
  "unknown label"
)